--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
 <body class="text-slate-900 overflow-x-hidden">
     <div class="grain-overlay"></div>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
